Add input can now be in sql format

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 # Created by https://www.gitignore.io/api/intellij+iml
 
 ### Custom ###
-input
 ranking
+input_links
+input_pages
 final_result
 
 
